Admin functionality added
