# Routes/auth.js
@@ -1,8 +1,9 @@
 const express = require('express');
-const { login } = require('../controller/authController');
+const { login, adminlogin } = require('../controller/authController');
 const router = express.Router();
 
 router.post("/signin",login)
+router.post("/admin/signin",adminlogin)
 
 
 module.exports = router;
