# controller/authController.js
@@ -1,16 +1,17 @@
 const { validateEmployeeInput,comparePassword } = require("../Helpers/inputhelper");
 const EmployeeSchema = require("../models/Employee")
+const AdminSchema = require("../models/Admin")
 
 const login = async(req ,res)=>{
-    const {EmployeeID , password} = req.body;
+    const {Email , password} = req.body;
 
-    if(!(validateEmployeeInput(EmployeeID,password))){
+    if(!(validateEmployeeInput(Email,password))){
         return res.status(400).json({
             message : "Please check your inputs"
         })
     }
 
-    const employee = await EmployeeSchema.findOne({EmployeeID})
+    const employee = await EmployeeSchema.findOne({Email})
     
     if(!employee || !comparePassword(password,employee.password)){
         return res.status(404).json({
@@ -24,5 +25,27 @@ const login = async(req ,res)=>{
     })
 }
 
+const adminlogin = async(req ,res)=>{
+    const {Email , password} = req.body;
 
-module.exports = {login}
+    if(!(validateEmployeeInput(Email,password))){
+        return res.status(400).json({
+            message : "Please check your inputs"
+        })
+    }
+
+    const admin = await AdminSchema.findOne({Email})
+    
+    if(!admin || !comparePassword(password,admin.password)){
+        return res.status(404).json({
+            message : "Invalid credentials"
+        })
+    }
+
+    res.status(200).json({
+        message:"user signed in" ,
+        token : admin.generateJwtFromUser()
+    })
+}
+
+module.exports = {login,adminlogin}
